argocd-apps/apps/wordpress/wordpress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress-routes
  namespace: wordpress
spec:
  parentRefs: # Which Gateway and listener to attach to
    - name: gateway # Gateway name
      namespace: ngf-gatewayapi-ns
      sectionName: http # Listener name from Gateway spec
  hostnames:
    - "portfolio.eshundev.online"
  rules: # Routing rules
    - backendRefs:
        - name: wordpress # Service to send traffic to
          port: 80
